# msmcomm

./: .gitignore  Makefile  Makefile.am  README  THANKS  TODO  configure.ac  msmcomm-1.0.pc.in
libmsmcomm/: .gitignore  Makefile.am  README  TODO  configure.ac  generate_structures.sh
libmsmcomm-next/: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  README  configure.ac  msmcomm-2.0.pc.in
libmsmcomm-next/msmcomm/: Makefile.am  basemessage.vala  basemessagegroup.vala  callmessage.vala  callmessagegroup.vala  messageassembler.vala  messagedisassembler.vala  messageresulttype.vala  messagetype.vala  messageutil.vala  miscmessage.vala  miscmessagegroup.vala  phonebookmessage.vala  phonebookmessagegroup.vala  simmessage.vala  statemessage.vala  statemessagegroup.vala  structures.h
libmsmcomm-next/specs/: all_hci_messages.txt  msmcomm.sdef  packet_definitions
libmsmcomm-next/tests/: Makefile.am  testmessageassembler.vala  testmessagedisassembler.vala
libmsmcomm-next/tools/: generate-structures-c.py  generate-structures-vala.py
libmsmcomm-next/vapi/: Makefile.am  structures.vapi
libmsmcomm-old/: Makefile.am
libmsmcomm-old/specs/: msmcomm.sdef
libmsmcomm-old/src/: Makefile.am  event_gsdi.c  event_sups.c  event_wms.c  group_sups_event.c  message.c  message_gsdi.c  message_pdsm.c  message_types.c  msmcomm.h  response_audio.c  response_cm_call.c  response_pdsm.c
libmsmcomm-old/tests/: Makefile.am  test_message.c
libmsmcomm-old/tools/: process-all-hci-messages.py
libmsmcomm-old/vapi/: Makefile.am  msmcomm-1.0.vapi
libmsmcomm/data/: msmcomm.sdef
libmsmcomm/docs/: all_hci_messages_hp_veer.txt  sim_callback_response.txt
libmsmcomm/msmcomm/: Makefile.am  abstractobject.vala  baseclient.vala  basemessage.vala  basemessagegroup.vala  basemodemaccessor.vala  baseradioaccess.vala  callmessage.vala  callmessagegroup.vala  hpveermessage.vala  hpveerradioaccess.vala  messageassembler.vala  messageclass.vala  messagedisassembler.vala  messageresult.vala  messageresulttype.vala  messagetype.vala  messageutil.vala  miscmessage.vala  miscmessagegroup.vala  msmcomm-2.0.deps  networkmessage.vala  networkmessagegroup.vala  palmprebasemessage.vala  palmprebasemessagegroup.vala  palmprecallclient.vala  palmpreclient.vala  palmprecommandhandler.vala  palmprecommandqueue.vala  palmpremessageclass.vala  palmpremessageresult.vala  palmpremessagetype.vala  palmpremessageutil.vala  palmpremiscclient.vala  palmpremiscmessage.vala  palmpremiscmessagegroup.vala  palmpremodemaccessor.vala  palmpreradioaccess.vala  palmprestateclient.vala  palmprestatemessage.vala  (+18 more)
libmsmcomm/protocol/: all_hci_messages_with_ids.txt  msmcomm.sdef
libmsmcomm/specs/: all_hci_messages_with_ids.txt  error_codes.txt  msmcomm.sdef  packet_definitions
libmsmcomm/src/: Makefile.am  context.c  crc.c  event_call.c  event_cm_call.c  event_cm_ph.c  event_gps.c  event_gsdi.c  event_misc.c  event_network.c  event_pbm.c  event_pdsm.c  event_radio_reset_ind.c  event_sim.c  event_sms.c  event_sups.c  event_system.c  frame.c  group_call_event.c  group_sim_event.c  group_sms_event.c  group_sups_event.c  internal.h  launch.c  message.c  message_audio.c  message_call.c  message_change_operation_mode.c  message_cm_call.c  message_cm_ph.c  message_gps.c  message_gsdi.c  message_misc.c  message_network.c  message_pbm.c  message_sim.c  message_sms.c  message_system.c  message_test_alive.c  message_types.c  (+18 more)
libmsmcomm/structures/: msmcomm.sdef
libmsmcomm/tests/: Makefile.am  test_message.c  testmessageassembler.vala  testmessagedisassembler.vala  testmessageutils.vala  testpalmpreaccess.vala
libmsmcomm/tools/: dump-hci-messages-for-pdef.py  generate-structures-c.py  generate-structures-vala.py  generate_structs.py  generate_structures.sh  process-all-hci-messages.py  xml-to-sdef.py
libmsmcomm/vapi/: Makefile.am  msmcomm-1.0.vapi  structures.vapi
libmsmhll/: Makefile.am  README  configure.ac  msmhll-1.0.pc.in
libmsmhll/msmhll/: Makefile.am  abstractlinkhandler.vala  activelinkhandler.vala  contract.vala  flowcontrolhandler.vala  frame.vala  linkcontext.vala  linklayercontrol.vala  setuplinkhandler.vala  timer.vala  transmissionhandler.vala
libmsmhll/tests/: Makefile.am
libmsmrpc/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.ac  msmrpc-1.0.pc.in
libmsmrpc/msmrpc/: Makefile.am  callbackregistry.vala  client.vala  clnt.c  common.vala  debug.h  msmrpc.h  oemrapiclient.vala  ops.c  rpc.c  rpc.h  rpc.vala  svc.c  svc.h  svc_clnt_common.c  types.h  xdr.c  xdrbuffer.vala
libmsmrpc/tests/: Makefile.am  testrpcclient.vala  testxdrbuffer.vala
libmsmrpc/vapi/: Makefile.am  msmrpc-1.0.vapi
msmcomm-specs/: .gitignore  AUTHORS  Makefile.am  configure.ac  msmcomm-specs-2.0.pc.in  msmcommd-specs-2.0.pc.in
msmcomm-specs/src/: Makefile.am  call.vala  error.vala  gps.vala  management.vala  misc.vala  network.vala  phonebook.vala  sim.vala  sms.vala  sound.vala  state.vala  sups.vala  voicemail.vala
msmcommd/: .gitignore  Makefile.am  README  configure.ac
msmcommd-specs/: Makefile.am  configure.ac  msmcommd-specs-1.0.pc.in
msmcommd-specs/src/: Makefile.am  commands.vala  error.vala  management.vala  structs.vala  unsolicited.vala
msmcommd/conf/: Makefile.am  msmcommd.conf
msmcommd/data/: Makefile.am  msmcommd.conf  org.msmcomm.service.in
msmcommd/include/: select.h
msmcommd/src/: Makefile.am  abstractlinkhandler.vala  abstractmodemchannel.vala  abstractobject.vala  activelinkhandler.vala  baseservice.vala  buffer.c  callservice.vala  commandhandler.vala  commands.vala  commandworker.vala  config.c  contract.vala  control_interface.c  control_message.c  crc16.c  dbusservice.vala  error.vala  flowcontrolhandler.vala  forward.c  frame.c  frame.vala  gpsservice.vala  hcimodemchannel.vala  linkcontext.vala  linklayercontrol.vala  llc.c  log.c  lowlevelcontrol.vala  main.c  main.vala  miscservice.vala  modemchannel.vala  modemcontrol.vala  msmcommd.c  msmcterm.c  (+23 more)
msmcterm/: configure.ac
msmsh/: configure.ac
msmvterm/: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  msmcomm.c
(+133 files in other folders)
