AC_INIT([msmterm], [0.1], [morphis@gravedo.de], [msmterm])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])

AC_PROG_CC
AC_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AC_PREFIX_DEFAULT(/usr/local)

if (test "${CFLAGS}" = ""); then
  CFLAGS="-Wall -O2"
fi

LIBMSMCOMM_REQUIRED=0.1
PKG_CHECK_MODULES(LIBMSMCOMM,
    libmsmcomm-1.0 >= $LIBMSMCOMM_REQUIRED)
AC_SUBST(LIBMSMCOMM_CFLAGS)
AC_SUBST(LIBMSMCOMM_LIBS)
  
AC_LANG_C
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
  
