NULL =

AM_CPPFLAGS = \
-I$(top_srcdir) \
$(NULL)

lib_LTLIBRARIES = \
libmsmcomm.la
$(NULL)

libmsmcomm_la_SOURCES = \
msmcomm.c \
msmcomm.h \
$(NULL)

msmcommincludedir = $(includedir)/msmcomm-1.0

msmcomminclude_HEADERS = \
msmcomm.h \
$(NULL)

libmsmcomm_la_LIBADD = \
$(NULL)

vapidir = $(datadir)/vala/vapi

dist_vapi_DATA = \
msmcomm-1.0.vapi \
$(NULL)

EXTRA_DIST = msmcomm-1.0.vapi
