NULL =

AM_CPPFLAGS = \
$(NULL)

lib_LTLIBRARIES = \
libmsmcomm.la
$(NULL)

libmsmcomm_la_SOURCES = \
talloc.c \
context.c \
launch.c \
util.c \
message.c \
message_types.c \
message_system.c \
message_network.c \
message_sim.c \
message_call.c \
message_gps.c \
message_audio.c \
message_sms.c \
response_types.c \
response_system.c \
response_network.c \
response_sim.c \
response_call.c \
response_gps.c \
response_audio.c \
response_sms.c \
event_system.c \
event_network.c \
event_sms.c \
event_sim.c \
group_sim_event.c \
group_call_event.c \
group_gps_event.c \
group_sups_event.c \
group_sms_event.c \
msmcomm.h \
internal.h \
linuxlist.h \
structures.h \
$(NULL)

msmcommincludedir = $(includedir)/msmcomm-1.0
msmcomminclude_HEADERS = \
msmcomm.h \
$(NULL)

libmsmcomm_la_LIBADD = \
$(NULL)
