NULL =

AM_CPPFLAGS = \
$(NULL)

lib_LTLIBRARIES = \
libmsmcomm.la
$(NULL)

libmsmcomm_la_SOURCES = \
talloc.c \
context.c \
util.c \
message.c \
message_types.c \
message_misc.c \
message_cm_ph.c \
message_network.c \
message_pbm.c \
message_gsdi.c \
message_call.c \
message_gps.c \
message_audio.c \
message_wms.c \
response_types.c \
response_misc.c \
response_cm_ph.c \
response_network.c \
response_pbm.c \
response_gsdi.c \
response_call.c \
response_gps.c \
response_audio.c \
response_wms.c \
event_misc.c \
event_cm_ph.c \
event_network.c \
event_wms.c \
event_pbm.c \
event_gsdi.c \
event_call.c \
event_sups.c \
msmcomm.h \
internal.h \
linuxlist.h \
structures.h \
frame.c \
crc.c \
$(NULL)

msmcommincludedir = $(includedir)/msmcomm-1.0
msmcomminclude_HEADERS = \
msmcomm.h \
$(NULL)

libmsmcomm_la_LIBADD = \
$(NULL)
